update: vue-pwa-vue-js-중급

--- a/help.html
+++ b/help.html
@@ -7,3 +7,13 @@ vue create vue-form // 폴더셋업
 cd vue-form
 npm run serve
 npm i axios //설치
+
+
+//폴더 삭제 방법
+ls
+rm -rf vue-todo/
+
+
+뷰 개발자 도구 단축키
+윈도우 : Ctrl + F12
+맥 : cmd + option + i
